--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/images/linkedin.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
     <meta
       name="description"
       content="Web site created using create-react-app"
